--- a/index.html
+++ b/index.html
@@ -4,9 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W10 Server Guide (2022)</title>
+
+    <!--CSS Links-->
+    <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+
+    <!--Fonts-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;800&family=Karla&display=swap');
+        </style> 
+    <title>LLG - Norske IT Guides</title>
 </head>
 <body>
+
+    <div class="gridstyle">
+        <div class="navbar">
+    <div class="details-logo">
+        <img src="./IMG/Laurin Limited Logo.png" alt="Laurin Logo" id="detailsLogo">
+    </div>
+    <div class="details-title">
+        <h1 id="detailsTitle">LAURIN LIMITED <span id="titleThin">GUIDEBOOK &copy;</span></h1>
+    </div>
+        </div>
+        <div class="details">
+    <div class="return-box">
+        <hr>
+    </div>
+    <div class="center-box">
+        <hr>
+        <h2 id="cbTitle"><span id="titleThin">HVORDAN OPPSETTE </span>WINDOWS 10 SERVER & NETTSIDE</h2>
+        <hr>
+    </div>
+
+    <div class="right-box">
+        <hr>
+    </div>
+        </div>
+        <div class="center">
+            <div class="center-listL">
+                
+                <div class="LinkBox">> OPPSETT AV VIRTUELLE MASKINER I VSPHERE</div>
+                <div class="LinkBox">> LINK</div>
+                <div class="LinkBox">> LINK</div>
+            </div>
+            <div class="center-listR">
+                <div class="LinkBox">> LINK</div>
+                <div class="LinkBox">> LINK</div>
+                <div class="LinkBox">> LINK</div>
+            </div>
+          </div>
+            <!--End of Center-->
+            <div class="footer">
+                <div class="F1">
+                  <h1>FOOTER BOX 1</h1>
+                </div>
+                <div class="F2">
+                  <h1>FOOTER BOX 2</h1>
+                </div>
+                <div class="F3">
+                  <h1>FOOTER BOX 3</h1>
+                </div>
+              </div>
+            </div>
+            <!--end of gridstyle-->
+        </div>
     
 </body>
 </html>
