--- a/index.html
+++ b/index.html
@@ -44,18 +44,20 @@
         <div class="center">
             <div class="centerOverhead">
                 <h1 class="centerOverheadTitle"><span id="titleThin">LES ALLE</span> KAPITELLENE</h1>
-                <p class="centerOverheadPara">Alle kapitellene er delt opp i seksjoner som er viktig å følge i rekkefølge.</p>
-                <hr>
+                <p class="centerOverheadPara">Alle kapitellene er delt opp i seksjoner som er viktig å følge i riktig rekkefølge.</p>
+                <hr id="overheadBR">
             </div>
             <div class="center-listL">
-                <div class="LinkBox">1.  >> OPPSETT AV VIRTUELLE MASKINER I VSPHERE</div>
-                <div class="LinkBox">2.  >> LINK</div>
-                <div class="LinkBox">3.  >> LINK</div>
+                <div class="LinkBox">1.  >> OPPSETT AV WINDOWS 10 SERVER MASKIN</div>
+                <div class="LinkBox">2.  >> KOBLE SERVEREN OPP TIL INTERNETT MED STATISK IP</div>
+                <div class="LinkBox">3.  >> INSTALLERE DNS</div>
+                <div class="LinkBox">4.  >> INSTALLERE ADDS</div>
             </div>
             <div class="center-listR">
-                <div class="LinkBox">4.  >> LINK</div>
-                <div class="LinkBox">5.  >> LINK</div>
-                <div class="LinkBox">6.  >> LINK</div>
+                <div class="LinkBox">5.  >> INSTALLERE DHCP</div>
+                <div class="LinkBox">6.  >> OPPSETT AV KLIENT MASKIN & NETTVERK</div>
+                <div class="LinkBox">7.  >> INSTALLERE IIS & FTP</div>
+                <div class="LinkBox">8.  >> HVORDAN KOBLE TIL OG BRUKE FILEZILLA</div>
             </div>
             <div class="center-bottom">
                 <div class="LinkBox" id="quizButton">> TEST DEGSELV MED EN QUIZ</div>
