testing new page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 <hr id="overheadBR">
             </div>
             <div class="center-listL">
-                <div class="LinkBox">1.  >> OPPSETT AV WINDOWS 10 SERVER MASKIN</div>
+                <a href="./HTML/servermaskin.html">
+                    <div class="LinkBox">1.  >> OPPSETT AV WINDOWS 10 SERVER MASKIN</div>
+                </a>
                 <div class="LinkBox">2.  >> KOBLE SERVEREN OPP TIL INTERNETT MED STATISK IP</div>
                 <div class="LinkBox">3.  >> INSTALLERE DNS</div>
                 <div class="LinkBox">4.  >> INSTALLERE ADDS</div>
@@ -63,6 +65,7 @@
                 <div class="LinkBox" id="quizButton">> TEST DEGSELV MED EN QUIZ</div>
             </div>
           </div>
+
             <!--End of Center-->
             <div class="footer">
                 <div class="F1">
