--- a/index.html
+++ b/index.html
@@ -51,15 +51,29 @@
                 <a href="./HTML/servermaskin.html">
                     <div class="LinkBox">1.  >> OPPSETT AV WINDOWS 10 SERVER MASKIN</div>
                 </a>
-                <div class="LinkBox">2.  >> KOBLE SERVEREN OPP TIL INTERNETT MED STATISK IP</div>
-                <div class="LinkBox">3.  >> INSTALLERE DNS</div>
-                <div class="LinkBox">4.  >> INSTALLERE ADDS</div>
+                <a href="./HTML/statiskIP.html">
+                    <div class="LinkBox">2.  >> KOBLE SERVEREN OPP TIL INTERNETT MED STATISK IP</div>
+                </a>
+                <a href="./HTML/DNS.html">
+                    <div class="LinkBox">3.  >> INSTALLERE DNS</div>
+                </a>
+                <a href="./HTML/ADDS.html">
+                    <div class="LinkBox">4.  >> INSTALLERE ADDS</div>
+                </a>
             </div>
             <div class="center-listR">
-                <div class="LinkBox">5.  >> INSTALLERE DHCP</div>
-                <div class="LinkBox">6.  >> OPPSETT AV KLIENT MASKIN & NETTVERK</div>
-                <div class="LinkBox">7.  >> INSTALLERE IIS & FTP</div>
-                <div class="LinkBox">8.  >> HVORDAN KOBLE TIL OG BRUKE FILEZILLA</div>
+                <a href="./HTML/DHCP.html">
+                    <div class="LinkBox">5.  >> INSTALLERE DHCP</div>
+                </a>
+                <a href="./HTML/klientmaskin.html">
+                    <div class="LinkBox">6.  >> OPPSETT AV KLIENT MASKIN & NETTVERK</div>
+                </a>
+                <a href="./HTML/IISFTP.html">
+                    <div class="LinkBox">7.  >> INSTALLERE IIS & FTP</div>
+                </a>
+                <a href="./HTML/filezilla.html">
+                    <div class="LinkBox">8.  >> HVORDAN KOBLE TIL OG BRUKE FILEZILLA</div>
+                </a>
             </div>
             <div class="center-bottom">
                 <div class="LinkBox" id="quizButton">> TEST DEGSELV MED EN QUIZ</div>
