worked on several chapters

--- a/HTML/DNS.html
+++ b/HTML/DNS.html
@@ -8,7 +8,7 @@
     <!--CSS Links-->
     <link rel="stylesheet" href="../CSS/reset.css">
     <link rel="stylesheet" href="../CSS/infopage.css">
-    <link rel="stylesheet" href="../CSS/mediaQueries.css">
+    <link rel="stylesheet" href="../CSS/MQinfopage.css">
 
     <!--Fonts-->
     <style>
@@ -46,9 +46,25 @@
         </div>
         <div class="center">
             <div class="center-list">
-                <h1 id="titleThin" class="centerTitle">HOVED TITEL</h1>
+                <h1 id="titleThin" class="centerTitle">INSTALLERE DNS</h1>
                 <hr id="centerLine">
-                <p class="centerUnderTitle">Undertittel, beskrivelse</p>
+                <p class="centerUnderTitle">Lær deg å installere og bruke DNS (Domain Name System), DNS blir brukt som et bibliotek for forskjellige IPer.</p>
+
+                <p class="centerUnderTitle">Nå skal vi installere DNS (Domain Name System) på serveren. Naviger til <span class="boldText">«Dashboard»</span> i Server Manager, og trykk på <span class="boldText">«Add roles and features»</span>. DNS er et system som maskinen trenger for at domenen kan bli funnet av andre maskiner. DNS fungerer som et bibliotek hvor alle domenene er lagret.</p>
+                <img class="image" src="../IMG/s24.png" alt="Bilde visning av det som blir sagt på tekst">
+
+                <p class="centerUnderTitle">Trykk deretter på <span class="boldText">«next»</span> helt til du når <span class="boldText">«Server Roles»</span>, hvor du da finner span. <span class="boldText">«DNS Server»</span> på lista og klikker på den. Så kan du trykke på <span class="boldText">«Add Features»</span> og trykke på <span class="boldText">«next»</span> helt til du kan trykke på <span class="boldText">«Install»</span>. (Anbefaler å trykke på <span class="boldText">«Allow Automatic Restarts»</span> når du er på Confirmation fanen, så serveren har de nyeste innstillingene klare.)</p>
+                <p class="centerUnderTitle">Når den er ferdig så er det bare å trykke på <span class="boldText">«Close»</span>.</p>
+                <img class="image" src="../IMG/s25.png" alt="Bilde visning av det som blir sagt på tekst">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p class="centerUnderTitle">Fortsett til neste steg</p>
+                <a href="../HTML/ADDS.html">
+                  <div class="LinkBox NextButton">4.  >> INSTALLERE ADDS</div>
+              </a>
             </div>
 
           </div>
