--- a/HTML/IISFTP.html
+++ b/HTML/IISFTP.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!--Scripts-->
+        <script defer src="../JS/script.js"></script>
+
+
     <!--CSS Links-->
     <link rel="stylesheet" href="../CSS/reset.css">
     <link rel="stylesheet" href="../CSS/infopage.css">
@@ -42,6 +46,7 @@
 
     <div class="right-box">
         <hr>
+        <p id="ScrollBtn" onclick="topFunction()" title="Go to top">< TILBAKE TIL TOPPEN ></p>
     </div>
         </div>
         <div class="center">
