--- a/HTML/ADDS.html
+++ b/HTML/ADDS.html
@@ -52,6 +52,7 @@
             <div class="center-list">
                 <h1 id="titleThin" class="centerTitle">INSTALLERE ADDS</h1>
                 <hr id="centerLine">
+                <p class="centerUnderTitle">Lær deg å installere og bruke ADDS (Active Directory Domain Services), dette må vi gjøre for at vi som brukere kan få tilgang til all data trafikken som blir sendt til serveren vår. Kort sagt, ADDS lar oss bruke og lagre informasjon om ressurser i nettverket. </p>
 
                 <p class="centerUnderTitle">Nå skal vi installere ADDS <span class="boldText">(Active Diretory Domain Services)</span>. Dette gjør vi ved å navigere til Dashboard, så trykker du på <span class="boldText">«Add Roles and Features»</span>.</p>
                 <img class="image" src="../IMG/s26.png" alt="Bilde visning av det som blir sagt på tekst">
