--- a/HTML/DHCP.html
+++ b/HTML/DHCP.html
@@ -53,7 +53,7 @@
             <div class="center-list">
                 <h1 id="titleThin" class="centerTitle">INSTALLERE DHCP</h1>
                 <hr id="centerLine">
-                <p class="centerUnderTitle">DHCP (Dynamic Host Configuration Protocol) blir brukt til å spre IP'er til andre maskiner som kobler til nettverket.</p>
+                <p class="centerUnderTitle">Lær deg å installere og bruke DHCP (Dynamic Host Configuration Protocol). DHCP er en protokoll som automatisk gir en maskin en IP adresse så den kan da kommunisere med nettverket.</p>
 
                 <p class="centerUnderTitle">Nå skal vi installere DHCP, naviger til Dashboard og trykk på <span class="boldText">«Add roles and features».</span></p>
                 <img class="image" src="../IMG/s33.png" alt="Bilde visning av det som blir sagt på tekst">
