--- a/HTML/DNS.html
+++ b/HTML/DNS.html
@@ -53,7 +53,7 @@
             <div class="center-list">
                 <h1 id="titleThin" class="centerTitle">INSTALLERE DNS</h1>
                 <hr id="centerLine">
-                <p class="centerUnderTitle">Lær deg å installere og bruke DNS (Domain Name System), DNS blir brukt som et bibliotek for forskjellige IPer.</p>
+                <p class="centerUnderTitle">Lær deg å installere og bruke DNS (Domain Name System), DNS blir brukt som et bibliotek for forskjellige IPer. Klienten søker opp et domene, og DNS'en tar den informasjonen og søker etter en IP koblet til det domenet.</p>
 
                 <p class="centerUnderTitle">Nå skal vi installere DNS (Domain Name System) på serveren. Naviger til <span class="boldText">«Dashboard»</span> i Server Manager, og trykk på <span class="boldText">«Add roles and features»</span>. DNS er et system som maskinen trenger for at domenen kan bli funnet av andre maskiner. DNS fungerer som et bibliotek hvor alle domenene er lagret.</p>
                 <img class="image" src="../IMG/s24.png" alt="Bilde visning av det som blir sagt på tekst">
