--- a/HTML/klientmaskin.html
+++ b/HTML/klientmaskin.html
@@ -51,9 +51,29 @@
         </div>
         <div class="center">
             <div class="center-list">
-                <h1 id="titleThin" class="centerTitle">HOVED TITEL</h1>
+                <h1 id="titleThin" class="centerTitle">OPPSETT AV KLIENT MASKIN & NETTVERK</h1>
                 <hr id="centerLine">
-                <p class="centerUnderTitle">Undertittel, beskrivelse</p>
+                <p class="centerUnderTitle">Lær deg hvordan man lager en klientmaskin for å teste ut serveren din. Her skal vi bruke vSphere for å lage en vanlig windows bruker og koble den automatisk opp til nettverket vårt.</p>
+
+                <p class="centerUnderTitle">Følg nøye med her på hvordan man lager klient-VM'en.</p>
+                <video class="infoVideos" controls>
+                    <source src="../IMG/VMWARE w10 klientmaskin oppsett.mp4" type=video/mp4>
+                  </video>
+
+                  <h1 class="centerTitle TSTitle">Vis video transkript >></h1>
+                  <hr id="centerLine">
+                  <p class="centerUnderTitle hidden transcript">Nå skal vi lage en windows 10 klientmaskin. Gå til ditt elevnummer, høyreklikk og klikk på ny virtuell maskin. På creation type så velger
+                    du create new virtual machine og next. Gi maskinen din et unikt navn. I location så velger du ikt-fag DS01. I computer resource så velger
+                    du ditt elevnummer. I storage så velger du ikt fag. Compatibility kan du la stå som det er nå. Guest OS family så skal vi ha windows
+                    og i Guest OS versjon, så skal vi ha Microsoft Windows 10. Gå da til new harddisk, velg disk provisioning, og velg thin provision. Gå til
+                    new network.Og browse. Her skal du da velge ditt elevnummer. Sjekk at status er huket av på connect at power on.Gå til new CD/DVD Drive, 
+                    og klikk på content library ISO. Her skal du velge Windows 10 multi. Sjekk at status er huket av på connect at power on. Gå til vm options,
+                    boot options, og huk av på force EFI setup. Sjekk at alt er riktig, og klikk på finish. Da har du sett opp en windows 10 klientmaskin.</p>
+
+                    <br>
+                    <br>
+                    <br>
+                    <br>
             </div>
 
           </div>
