--- a/HTML/servermaskin.html
+++ b/HTML/servermaskin.html
@@ -60,6 +60,21 @@
                     <source src="../IMG/VMWARE W10 Server oppsett.mp4" type=video/mp4>
                   </video>
 
+                  <h1 class="centerTitle TSTitle">Vis video transkript >></h1>
+                  <hr id="centerLine">
+                  <p class="centerUnderTitle hidden transcript">Her skal vi lage en windows 10 server. Vi begynner med høyreklikke elev nummeret vårt, og klikker på ny virtual maskin. På creation type så velger du create new virtual machine også next.
+                    Her kan du gi maskinen din et unikt navn. På location så velger du ikt fag DS01. I computer resource, så velger du ditt elevnummer. I Storage så velger du ikt-fag I compatibility så kan
+                    du la det stå som det er nå. I guest OS family så skal vi ha windows. Og I guest OS versjon, skal vi ha windows server 2016 or later . Her går du inn på ny harddisk, Disk provisioning, 
+                    og velg thin provision. Gå da videre til new network, og browse. Velg her ditt eget elevnummer. Sjekk også at status er connect at power on. Gå til new CD/DVD drive, og velg content library
+                    ISO file. Her skal vi da velge windows server 2019. Sjekk da at status her også er connect at power on. Gå videre til vm options, boot options, og huk av på force EFI setup. Da trykker du
+                    på next, sjekker at alt er riktig, og finish. Da har du laget din egen windows 10 maskin.</p>
+
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+
+
                 <p class="centerUnderTitle">Start ved å åpne den nye VM'en du har laget for Windows SERVEREN, ved å høyreklikke den i lista, naviger til <span class="boldText">«Power» </span>og trykk på <span class="boldText">«Power On»</span>.</p>
                 <img class="image" src="../IMG/s1.png" alt="Bilde visning av det som blir sagt på tekst">
 
