--- a/HTML/filezilla.html
+++ b/HTML/filezilla.html
@@ -51,9 +51,30 @@
         </div>
         <div class="center">
             <div class="center-list">
-                <h1 id="titleThin" class="centerTitle">HOVED TITEL</h1>
+                <h1 id="titleThin" class="centerTitle">HVORDAN KOBLE TIL OG BRUKE FILEZILLA</h1>
                 <hr id="centerLine">
-                <p class="centerUnderTitle">Undertittel, beskrivelse</p>
+                <p class="centerUnderTitle">Lær hvordan man navigerer gjennom filezilla og hvordan man kobler den opp til serveren. Vi må bruke filezilla for å overføre filer fra hovedpcen til serveren.</p>
+
+                <p class="centerUnderTitle">Nå kan vi koble til filezilla via FTP, så vi kan sende over filene fra vår egen PC. Dette gjør vi ved å åpne filezilla på din hoved PC, så trykker du på ikonet som ligger under <span class="boldText">«File»</span>.</p>
+                <img class="image bigimage" src="../IMG/s81.png" alt="Bilde visning av det som blir sagt på tekst">
+
+                <p class="centerUnderTitle">Her så skal du lage en ny server kobling, så trykk på <span class="boldText">«New Site»</span>, og gi det et navn så du husker hvilken kobling det er. Så ser du til høyre side hvor du da skal velge <span class="boldText">«FTP – File Transfer Protocol» i «Protocol:»</span> boksen. Så skriver du inn IPen til web serveren din, og legg inn port 21. <span class="boldText">«Encryption»</span> kan du la stå som den er nå på bildet, og <span class="boldText">«Logon Type»</span> skal være <span class="boldText">«Normal»</span>. Her så skriver du inn innloggings informasjonen til server admin kontoen. Deretter kan du trykke på <span class="boldText">«Connect»</span>, som da skal koble deg til serveren.</p>
+                <img class="image bigimage" src="../IMG/s82.png" alt="Bilde visning av det som blir sagt på tekst">
+
+                <p class="centerUnderTitle">Her kan du se både fil strukturen til hoved pcen og til serveren <span class="boldText">(høyre boks)</span>. Naviger gjennom filstrukturen på hoved pcen til hvor filene til nettsiden din er, og så er det bare så enkelt som å velge filene du vil sende over og dra de over til den høyre boksen som er server filene.</p>
+                <img class="image bigimage" src="../IMG/s83.png" alt="Bilde visning av det som blir sagt på tekst">
+
+                <p class="centerUnderTitle">Nå kan du åpne en nettleser og søke opp IPen til web serveren, så finner du nettsiden du har akkuratt lagt inn.</p>
+                <img class="image bigimage" src="../IMG/s84.png" alt="Bilde visning av det som blir sagt på tekst">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p class="centerUnderTitle">Tilbake til hjemmesiden?</p>
+                <a href="../index.html">
+                    <div class="LinkBox NextButton">>> HJEM</div>
+                </a>
             </div>
 
           </div>
