--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
                 </a>
             </div>
             <div class="center-bottom">
-                <div class="LinkBox" id="quizButton">> TEST DEGSELV MED EN QUIZ</div>
+                <a href="./HTML/quiz.html">
+                    <div class="LinkBox" id="quizButton">> TEST DEGSELV MED EN QUIZ</div>
+                </a>
+
             </div>
           </div>
             <!--End of Center-->
