--- a/HTML/quiz.html
+++ b/HTML/quiz.html
@@ -63,12 +63,12 @@
                             <div class="my-5">
                                 <p class="quizQ">1. Hva står DNS for?</p>
                                 <div class="form-check my-2 text-white-50">
-                                    <input type="radio" name="q1" value="A" checked>
-                                    <label class="form-check-label">Den Nationale Scene</label>
+                                    <input id="q1a" type="radio" name="q1" value="A" checked>
+                                    <label for="q1a" class="form-check-label">Den Nationale Scene</label>
                                 </div>
                                 <div class="form-check my-2 text-white-50">
-                                    <input type="radio" name="q1" value="B">
-                                    <label class="form-check-label">Domain Name System</label>
+                                    <input id="q1b" type="radio" name="q1" value="B">
+                                    <label for="q1b" class="form-check-label">Domain Name System</label>
                                 </div>
                             </div>
 
